@@ -24,6 +24,8 @@ class WC_Stripe_UPE_Payment_Method_Link extends WC_Stripe_UPE_Payment_Method {
 			for further payments.',
 			'woocommerce-gateway-stripe'
 		);
+
+		add_filter( 'woocommerce_gateway_title', [ $this, 'filter_gateway_title' ], 10, 2 );
 	}
 
 	/**
@@ -108,5 +110,31 @@ class WC_Stripe_UPE_Payment_Method_Link extends WC_Stripe_UPE_Payment_Method {
 	 */
 	public function requires_automatic_capture() {
 		return false;
+	}
+
+	/**
+	 * Filters the gateway title to reflect Link as the payment method.
+	 */
+	public function filter_gateway_title( $title, $id ) {
+		global $theorder;
+
+		// If $theorder is empty (i.e. non-HPOS), fallback to using the global post object.
+		if ( empty( $theorder ) && ! empty( $GLOBALS['post']->ID ) ) {
+			$theorder = wc_get_order( $GLOBALS['post']->ID );
+		}
+
+		if ( ! is_object( $theorder ) ) {
+			return $title;
+		}
+
+		$method_title = $theorder->get_payment_method_title();
+
+		if ( 'stripe' === $id && ! empty( $method_title ) ) {
+			if ( 'Link' === $method_title ) {
+				return $method_title;
+			}
+		}
+
+		return $title;
 	}
 }
